--- a/app/src/main/res/layout/activity_add_or_del.xml
+++ b/app/src/main/res/layout/activity_add_or_del.xml
@@ -22,7 +22,7 @@
 
     <Button android:layout_width="match_parent"
               android:layout_height="50dp"
-              android:text="增加"
+              android:text="搜索"
               android:id="@+id/bt"/>
 
 
